[gd_scene load_steps=8 format=2]

[ext_resource path="res://Enemy.gd" type="Script" id=1]
[ext_resource path="res://images/enemy.png" type="Texture" id=2]
[ext_resource path="res://images/spr_enemy_splatter1.png" type="Texture" id=3]
[ext_resource path="res://images/spr_enemy_splatter2.png" type="Texture" id=4]
[ext_resource path="res://images/spr_enemy_splatter3.png" type="Texture" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "splat",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 50.0

[node name="Enemy" type="Area2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="EvolTimer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="area_entered" from="." to="." method="_on_Enemy_area_entered"]
[connection signal="timeout" from="EvolTimer" to="." method="_on_EvolTimer_timeout"]
